# Ecommerce-Assistant

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose.yml  domain.yml  endpoints_development.yml  pyproject.toml
actions/: actions.py
data/: nlu.yml  rules.yml  stories.yml
data/nlu/: chichat.yml  faq.yml  general.yml  nlu.yml
data/stories/: request_clothes.yml  stories.yml
