[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["IVAN <aguas.xavier2013a@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
rasa = {extras = ["full"], version = "^2.8.1"}
spacy = "^3.1.1"
download = "^0.3.5"
rasa-x = {url = "https://pypi.rasa.com/api/package/rasa-x/rasa_x-0.42.0-py3-none-any.whl"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
